Le Prince et ses premières traductions

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1245,11 +1245,15 @@
         Cambridge University Press, 1988. (190 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/machiavelli-prince?format=PB"><abbr>ISBN</abbr> 9780521349932</a>.
       </li>
-      <li>Other translations of <i class="booktitle">The Prince:
+      <li>Other translations of <i class="booktitle">The Prince</i>:
         <a href="https://en.wikisource.org/wiki/The_Prince_(Marriott)">W. K. Marriott's translation (1908)</a>
         and
         <a href="https://en.wikisource.org/wiki/The_Prince_(Hill_Thomson)">Ninian Hill Thomson's translation (1910)</a>
         are available on Wikisource.
+      </li>
+      <li>
+        <a href="http://hyperprince.ens-lyon.fr/" hreflang="fr" lang="fr">Le Prince et ses premières traductions</a>,
+        <i class="website">Hyperprince</i>.
       </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">Discourses on Livy</i>. Translated by Julia Conaway Bondanella and Peter Bondanella. Oxford World's Classics. Oxford University Press, 2008. (448 pages)
