TheRealNews: Seattle Buckles under Corporate Pressure, Repeals 'Amazon Tax' ...

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2651,12 +2651,19 @@
         <a href="http://www.publicseminar.org/againsttrump-notes-from-year-one/"><i class="booktitle">#AgainstTrump: Notes from Year One</i></a>.
         <!--@@get book-->
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=JnvN36Z3M78">Seattle Buckles Under Corporate Pressure, Repeals 'Amazon Tax' to Fight Homelessness</a>
+        (YouTube, 15 minutes, 14.06.2018).
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
       * The Majority Report with Sam Seder: "Obama Destroyed Black American Wealth While Bailing Out Wall Street", 10 minutes, 17.12.2017: https://www.youtube.com/watch?v=mvBmFjNt6xs - interview with Ryan Cooper 
       * Secular Talk: "Schools Move To 4 Day Week So Teachers Can Work At Walmart To Make Rent", 8 minutese, 12.01.2018: https://www.youtube.com/watch?v=C1MUzcXRIxc 
         See "Oklahoma schools go on 4-day weeks so teachers can work at Walmart on Mondays to make rent", boingboing, 07.02.2018: https://boingboing.net/2018/02/07/this-is-not-ok.html 
+      * 'Frank : "Trump won because Clinton and the Democrats dismissed the concerns of working people"'; L'Obs on YouTube, 04.06.2018: https://www.youtube.com/watch?v=4xPCMhwyHy0
+        Thomas Frank is author of the book "Listen, Liberal : Or, What Ever Happened to the Party of the People ?"
+      * TheRealNews: "Thomas Frank on the Demise of the Democratic Party", YouTube, 19.06.2017: https://www.youtube.com/watch?v=OUkA-5Vd3E0 
     -->
 
     <h3>The War Machine</h3>
