Socialist Review: Corporate Capture

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2615,6 +2615,12 @@
         <a href="https://www.youtube.com/watch?v=-jYmEzq3hLc">Corporate Looting: Sub-Saharan Africa Loses $100B A Year</a>
         (YouTube, 11.02.2018, 15 minutes): interview with Patrick Bond.
       </li>
+      <!--Corporate capture:-->
+      <li>
+        <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
+        <i class="magazine">Socialist Review</i>, January 2004.
+      </li>
+      <!--/Corporate capture-->
       <li>TheRealNews:
         <a href="https://www.youtube.com/watch?v=rgyMEkrXWXk">Trump’s Budget and Infrastructure Plans Threaten Environment</a>
         (YouTube, 14.02.2018, 12 minutes): 
