Hoedeman: Rolling back corporate capture will take more than ...

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2620,6 +2620,10 @@
         <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
         <i class="magazine">Socialist Review</i>, January 2004.
       </li>
+      <li>Hoedeman, Olivier:
+        <a href="https://www.opendemocracy.net/can-europe-make-it/olivier-hoedeman/rolling-back-corporate-capture-will-take-more-than-eu-lobby-tran">Rolling back corporate capture will take more than <abbr>EU</abbr> lobby transparency</a>,
+        <i class="website">openDemocracy</i>, 09.10.2015.
+      </li>
       <!--/Corporate capture-->
       <li>TheRealNews:
         <a href="https://www.youtube.com/watch?v=rgyMEkrXWXk">Trump’s Budget and Infrastructure Plans Threaten Environment</a>
