The Ring of Fire: Monsanto Is Poisoning You

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2615,6 +2615,15 @@
         <a href="https://www.youtube.com/watch?v=-jYmEzq3hLc">Corporate Looting: Sub-Saharan Africa Loses $100B A Year</a>
         (YouTube, 11.02.2018, 15 minutes): interview with Patrick Bond.
       </li>
+      <li>The Ring of Fire:
+        <a href="https://www.youtube.com/watch?v=HhAy83MiiWM">Monsanto Is Poisoning You: A Dangerous History</a>
+        (YouTube, 10 minutes, 08.06.2018).Thom Hartmann interviews lawyer Mike Papantonio.
+        See also Paantonio's website <a href="https://www.levinlaw.com/america-lawyer">America's Lawyer</a>.
+        <!--"The problem with GMO is that it is saturated with Roundup." We found Roundup in the urine of people who have never worked with it. The media won't tell the story of Roundup because of advertising revenue.
+          Papantonio: Consumers can only defend themselves by boycotts and by suing the companies. Also have these stories covered in documentaries and social media.
+          See also: Tom Oder: "Roundup cover-up? Book paints troubling portrait of the world's most popular weed killer - 'Whitewash' finds disturbing evidence of corporate suppression.", Mother Nature Network, 04.12.2017: https://www.mnn.com/your-home/organic-farming-gardening/stories/roundup-book-whitewash-glyphosate-worlds-most-popular-weed-killer
+        -->
+      </li>
       <!--Corporate capture:-->
       <li>
         <a href="http://socialistreview.org.uk/281/corporate-capture">Corporate Capture</a>,
