Blum: The Anti-Empire Report #157

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2102,6 +2102,14 @@
           <p>A: Because there’s no American embassy there.</p>
         </blockquote>
       </li>
+      <li>Blum, William:
+        <a href="https://williamblum.org/aer/read/157">The Anti-Empire Report #157</a>,
+        <i class="website">William Blum's website</i>, 18.04.2018.
+        Blum's <a href="https://twitter.com/WilliamBllum/status/1002171435304054784">announcement on Twitter</a> (31.05.2018):
+        <q>#Capitalism remains the world’s pre-eminent system primarily because of military power combined with <abbr>CIA</abbr> covert actions.
+          It’s that combination that irredeemably crippled socialist forces in Vietnam, Cambodia, Albania, Afghanistan, Yugoslavia, etc.
+        </q>
+      </li>
       <li>Gindin, Sam; Panitch, Leo:
         <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i>.
         Verso, 2013. <a href="https://www.versobooks.com/books/1527-the-making-of-global-capitalism"><abbr>ISBN</abbr> 9781781681367</a>.
