--- a/science/index.html
+++ b/science/index.html
@@ -1196,6 +1196,10 @@
         <a href="http://nautil.us/blog/the-case-for-more-science-and-philosophy-books-for-children">The Case for More Science and Philosophy Books for Children</a>,
         <i class="blog">Nautilus blog</i>, 21.07.2017.
       </li>
+      <li>
+        <a href="https://brilliant.org/">Brilliant: Math and Science Done Right</a>:
+        online platform with math and science courses.
+      </li>
     </ul>
 
     <p>Economics:</p>
