'Bad Peter' DUST Original sci-fi short film

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -600,6 +600,10 @@
         <a href="https://qz.com/1295291/ai-needs-to-earn-our-trust-just-like-any-human-relationship/"><abbr>AI</abbr> needs to earn our trust, just like any human relationship</a>,
         <i class="website">Quartz</i>, 06.06.2018.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=X-r1KvdndV0">"Bad Peter" DUST Original sci-fi short film (uncensored director's cut)</a>
+        (YouTube, 9 minutes, 21.06.2018).
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
