Portal:Philosophy (Wikipedia)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -520,6 +520,10 @@
       <li>
         <a href="https://historyofwomenphilosophers.org/ecc/#hwps">Encyclopedia of Concise Concepts by Women Philosophers - History Of Women Philosophers</a>.
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Portal:Philosophy">Portal:Philosophy</a>
+        (Wikipedia).
+      </li>
     </ul>
     <!-- 
     <h3>Skills and Methods</h3>
