Portal: Philosophie (de.wikipedia)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -524,6 +524,10 @@
         <a href="https://en.wikipedia.org/wiki/Portal:Philosophy">Portal:Philosophy</a>
         (Wikipedia).
       </li>
+      <li>
+        <a href="https://de.wikipedia.org/wiki/Portal:Philosophie" hreflang="de" lang="de">Portal Philosophie</a>
+        (Wikipedia).
+      </li>
     </ul>
     <!-- 
     <h3>Skills and Methods</h3>
