Portail de la philosophie (fr.wikipedia)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -528,6 +528,10 @@
         <a href="https://de.wikipedia.org/wiki/Portal:Philosophie" hreflang="de" lang="de">Portal Philosophie</a>
         (Wikipedia).
       </li>
+      <li>
+        <a href="https://fr.wikipedia.org/wiki/Portail:Philosophie" hreflang="fr" lang="fr">Portail de la philosophie</a>
+        (Wikipedia).
+      </li>
     </ul>
     <!-- 
     <h3>Skills and Methods</h3>
