Walls: The Best Books on Henry David Thoreau

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1644,6 +1644,16 @@
         <a href="https://fivebooks.com/best-books/tim-crane-on-metaphysics/">The best books on Metaphysics</a>,
         <i class="website">Five Books</i> (no date; April 2018?).
       </li>
+      <li>Walls, Laura Dassow:
+        <a href="https://fivebooks.com/best-books/henry-david-thoreau/">The Best Books on Henry David Thoreau</a>,
+        <i class="website">Five Books</i>, June 2018.
+        The recommendations are the following:
+        <i class="booktitle">Walden</i> by Henry David Thoreau (1854),
+        <i class="booktitle">The Maine Woods</i> by Henry David Thoreau,
+        <a href="https://en.wikipedia.org/wiki/Pilgrim_at_Tinker_Creek"><i class="booktitle">Pilgrim at Tinker Creek</i></a> by Annie Dillard (1974),
+        <i class="booktitle">Stress and Freedom</i> (<i class="booktitle" lang="de">Streß und Freiheit</i>) by Peter Sloterdijk (2011),
+        <a href="https://en.wikipedia.org/wiki/Annihilation_(VanderMeer_novel)"><i class="booktitle">Annihilation</i></a> by Jeff VanderMeer (2014).
+      </li>
       <li>Warburton, Nigel:
       	<a href="https://fivebooks.com/reader-list/best-philosophy-books-for-the-beach-this-summer-nigel-warburton/">The Best Philosophy Books to Take on Holiday</a>,
       	<i class="website">Five Books</i>, June 2018. Warburton's recommendations are
