--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1654,6 +1654,16 @@
         <i class="booktitle">Stress and Freedom</i> (<i class="booktitle" lang="de">Streß und Freiheit</i>) by Peter Sloterdijk (2011),
         <a href="https://en.wikipedia.org/wiki/Annihilation_(VanderMeer_novel)"><i class="booktitle">Annihilation</i></a> by Jeff VanderMeer (2014).
       </li>
+      <li>Bakewell, Sarah:
+        <a href="https://fivebooks.com/best-books/existentialism/">The Best Books on Existentialism</a>,
+        <i class="website">Five Books</i> (no date).
+        The recommendations are the following:
+        <i class="booktitle">Existentialism: A Reconstruction</i> by David Cooper,
+        <i class="booktitle">Nausea</i> by Jean-Paul Sartre,
+        <i class="booktitle">Man’s Search for Meaning</i> by Viktor Frankl,
+        <i class="booktitle">The Existentialist Reader</i> edited by Paul S. MacDonald,
+        <i class="booktitle">Heidegger: An Introduction</i> by Richard Polt.
+      </li>
       <li>Warburton, Nigel:
       	<a href="https://fivebooks.com/reader-list/best-philosophy-books-for-the-beach-this-summer-nigel-warburton/">The Best Philosophy Books to Take on Holiday</a>,
       	<i class="website">Five Books</i>, June 2018. Warburton's recommendations are
