Smith: Kritical Theory (blog)

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -512,6 +512,10 @@
         <a href="https://macblog.mcmaster.ca/fryeblog/critical-method/preface.html">Northrop Frye &amp; Critical Method</a>:
         online version of a dissertation written in 1972.
       </li>
+      <li>Smith, Christian:
+        <a href="http://blogs.warwick.ac.uk/christiansmith/">Kritical Theory</a> (blog).
+        <!--Contact form has logical CAPTCHA: "My t-shirt is red. What colour is my t-shirt?"-->
+      </li>
     </ul>
 
     <p>Introductions to literary criticism:</p>
