Webber: Five Underrated Existentialist Classics

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1664,6 +1664,16 @@
         <i class="booktitle">The Existentialist Reader</i> edited by Paul S. MacDonald,
         <i class="booktitle">Heidegger: An Introduction</i> by Richard Polt.
       </li>
+      <li>Webber, Jonathan:
+        <a href="https://fivebooks.com/best-books/underrated-existentialist-classics/">Five Underrated Existentialist Classics</a>,
+        <i class="website">Five Books</i> (no date).
+        Webber's recomendations are the following:
+        <i class="booktitle">When Things of the Spirit Come First</i> (<i class="booktitle" lang="fr">Quand prime le spirituel</i>) by Simone de Beauvoir (1979),
+        <i class="booktitle">Pyrrhus and Cinéas</i> by Simone de Beauvoir (1944),
+        <i class="booktitle">Saint Genet: Actor and Martyr</i> (<i class="booktitle" lang="fr">Saint Genet, comédien et martyr</i>) by Jean-Paul Sartre (1952),
+        <a href="https://en.wikipedia.org/wiki/Black_Skin,_White_Masks"><i class="booktitle">Black Skin, White Masks</i></a> by Frantz Fanon (1952),
+        <i class="booktitle">Charlotte Sometimes</i> by Penelope Farmer (1969).
+      </li>
       <li>Warburton, Nigel:
       	<a href="https://fivebooks.com/reader-list/best-philosophy-books-for-the-beach-this-summer-nigel-warburton/">The Best Philosophy Books to Take on Holiday</a>,
       	<i class="website">Five Books</i>, June 2018. Warburton's recommendations are
