--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -200,6 +200,10 @@
         <a href="https://www.youtube.com/watch?v=kaJXRrBEdao">What Happened to Critical Thinking? (<abbr>Pt</abbr> 3)</a> (10 minutes).
         Uploaded on 1 August 2017.
       </li>
+      <li>De Dora, Michael:
+        <a href="https://centerforinquiry.org/blog/which_books_do_freethinkers_consider_essential_reading/">Which Books Do Freethinkers Consider Essential Reading?</a>,
+        <i class="blog">Center for Inquiry blog</i>, 14.10.2010.
+      </li>
     </ul>
     <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
       * Do you know anyone who has written a number of research (quantitative and qualitative) on critical thinking? : https://www.researchgate.net/post/Do_you_know_anyone_who_has_written_a_number_of_research_quantitative_and_qualitative_on_critical_thinking
