Cleary: Philosophy shrugged (Aeon)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1974,6 +1974,12 @@
         <a href="https://blogs.scientificamerican.com/cross-check/was-wittgenstein-a-mystic/">Was Wittgenstein a Mystic?</a>,
         <i class="blog">Cross-Check</i> (<i class="magazine">Scientific American</i> blog), 25.05.2018.
       </li>
+      <!--@@AynRand:-->
+      <li>Cleary, Skye C.:
+        <a href="https://aeon.co/ideas/philosophy-shrugged-ignoring-ayn-rand-wont-make-her-go-away">Philosophy shrugged: ignoring Ayn Rand won’t make her go away</a>,
+        <i class="website">Aeon</i>, 22.06.2018.
+      </li>
+      <!--/AynRand-->
       <li lang="de">Habermas, Jürgen:
         <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
         <i class="blog">Logbuch Suhrkamp</i>, 09.03.2018.
