Machiavelli: link grouping more explicit

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1222,17 +1222,21 @@
     <p>Machiavelli's name is usually used as a by-word for a type of politics in which
       the end justifies the means. This simplification does not do justice to his legacy.
     </p>
+    <p>Introductory materials:</p>
     <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Consequentialism">Consequentialism</a>: article on Wikipedia.
         <a href="https://en.wikipedia.org/wiki/Niccol%C3%B2_Machiavelli">Machiavelli</a> is listed as a notable consequentialist.
       </li>
-      <li>
-        <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a>: article on Wikipedia.
-      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.britannica.com/biography/Niccolo-Machiavelli">Niccolò Machiavelli</a>:
         article in the <i class="booktitle">Encyclopedia Britannica</i>.
+      </li>
+    </ul>
+    <p>Machiavelli's works:</p>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a>: article on Wikipedia.
       </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">The Prince</i>. Translated by Peter Bondanella and Edited by Maurizio Viroli.
@@ -1298,17 +1302,15 @@
         Contains private letters, <i class="booktitle">The Prince</i>, <i class="booktitle">The Discourses</i> (abridged), <i class="booktitle">Belfagor</i>, <i class="booktitle">The Mandrake Root</i>, <i class="booktitle">The Art of War</i> (abridged),
         <i class="booktitle">The Life of Castruccio Castracani of Lucca</i> and <i class="booktitle">The History of Florence</i> (abridged).
       </li>
+    </ul>
 
-      <!--Biographies and Studies:-->
+    <p>Biographies and studies:</p>
+    <ul>
       <li>Skinner, Quentin:
         <i class="booktitle">Machiavelli: A Very Short Introduction</i>. Very Short Introductions. Oxford University Press, 2000.
         <a href="https://global.oup.com/academic/product/machiavelli-a-very-short-introduction-9780192854070"><abbr>ISBN</abbr> 9780192854070</a>.
         <br />Originally published in 1981; the bibliography was updated for the 2000 reissue.
         <!--@@German translation: Junius (out of print?)-->
-      </li>
-      <li>Skinner, Quentin:
-        <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
-        public lecture at the University of York, 12 February 2013.
       </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
@@ -1394,8 +1396,13 @@
         <i class="newspaper">Die Zeit</i>, <abbr>Nr.</abbr> 43, 19.10.2000.
       </li>
       <!--Making up Machiavelli (PhD?): https://www.sciencespo.fr/ecole-doctorale/sites/sciencespo.fr.ecole-doctorale/files/5.%20M1S1_Marcello-SIMONETTA.pdf -->
-
-      <!--Articles, podcasts and blog posts:-->
+    </ul>
+    <p>Articles, podcasts, videos and blog posts:</p>
+    <ul>
+      <li>Skinner, Quentin:
+        <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
+        public lecture at the University of York, 12 February 2013.
+      </li>
       <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
         <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
         <i class="website">France Culture</i></span>, 02.05.2012: podcast (59 minutes) in which
@@ -1464,7 +1471,7 @@
       </li>
       <li><span lang="fr">Souq, Pierre; Tôn, Emilie:
         <a href="https://www.lexpress.fr/actualite/monde/amerique-nord/donald-trump-est-il-le-prince-de-machiavel_1874221.html" hreflang="fr">"Donald Trump est-il le prince de Machiavel?"</a>,
-        <i class="newspaper">L'Express</i>, 30.01.2017.
+        <i class="newspaper">L'Express</i></span>, 30.01.2017.
       </li>
       <li>
         <a href="http://ianchadwick.com/machiavelli/">The Municipal Machiavelli</a>:
@@ -1480,8 +1487,10 @@
         (Darmiento is an undergraduate student at the University of Chicago studying Philosophy.)
       </li>
       <!--https://www.les-philosophes.fr/machiavel.html -->
+    </ul>
 
-      <!--Background: history-->
+    <p>Cultural and historical background:</p>
+    <ul>
       <li>Najemy, John M.:
         <i class="booktitle">A History of Florence, 1200 - 1575</i>. Wiley-Blackwell, 2008. (528 pages)
         <a href="https://www.wiley.com/en-us/A+History+of+Florence%2C+1200+1575-p-9781405178464"><abbr>ISBN</abbr> 978-1-405-17846-4</a>.
