11th Science Day

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -148,13 +148,19 @@
           <li><a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day/The%20Shock%20Doctrine">The Shock Doctrine</a> (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
         </ul>
       </li>
-      <li>11th Science: 29 June 2018. <!--Topics:
+      <li><a href="http://events.mi.hdm-stuttgart.de/2018-06-29-11-science-day">11th Science</a>: 29 June 2018. Topics:
+        <ul>
+          <li>"Cool Stuff Nearby" - Astrophysics - Andreas Stiegler</li>
+          <li>"Rocket Engines" - Engineering - Stephan Soller</li>
+        </ul>
+      </li>
+      <!-- <li>12th Science: @@ December 2018 / January 2019. Topics:
         <ul>
           <li></li>
           <li></li>
           <li></li>
-        </ul>-->
-      </li>
+        </ul>
+      </li>-->
     </ul>
 
   </main>
