Moffatt: Tariffs - The Economic Effect of Tariffs

--- a/science/index.html
+++ b/science/index.html
@@ -1233,6 +1233,10 @@
       </li>
       <li><a href="https://10yearsafterthecrash.com/">10 Years After The Crash</a>.
       </li>
+      <li>Moffatt, Mike:
+        <a href="https://www.thoughtco.com/the-economic-effect-of-tariffs-1146368">Tariffs - The Economic Effect of Tariffs</a>,
+        <i class="website">ThoughtCo</i>, 17.03.2017.
+      </li>
     </ul>
 
   </main>
