Atkins: Galileo's Finger (2004)

--- a/science/index.html
+++ b/science/index.html
@@ -1200,6 +1200,12 @@
         <a href="https://brilliant.org/">Brilliant: Math and Science Done Right</a>:
         online platform with math and science courses.
       </li>
+      <li>Atkins, Peter:
+        <i class="booktitle">Galileo's Finger: The Ten Great Ideas of Science</i>. Oxford University Press, 2004. (398 pages)
+        <a href="https://global.oup.com/academic/product/galileos-finger-9780198609414"><abbr>ISBN</abbr> 9780198609414</a>.
+        <br />See also
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1325288/">F. David Winter's review of <i class="booktitle">Galileo's Finger</i></a>.
+      </li>
     </ul>
 
     <p>Economics:</p>
