Boston University: Machiavelli's The Prince after 500 Years

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1218,7 +1218,7 @@
       <li>To do: find research articles that support or contradict Thor Heyerdahl's findings.</li>
     </ul>
 
-    <h3 id="machiavelli">Machiavelli</h3>
+    <h3 id="machiavelli">Niccolò Machiavelli</h3>
     <p>Machiavelli's name is usually used as a by-word for a type of politics in which
       the end justifies the means. This simplification does not do justice to his legacy.
     </p>
@@ -1402,6 +1402,10 @@
       <li>Skinner, Quentin:
         <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
         public lecture at the University of York, 12 February 2013.
+      </li>
+      <li>Boston University:
+        <a href="https://www.youtube.com/watch?v=u-eqXDUO2mU">History Department Panel: Machiavelli's "The Prince" After 500 Years</a>
+        (YouTube, 85 minutes, 11.02.2013).
       </li>
       <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
         <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
