--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1407,6 +1407,12 @@
         <a href="https://www.youtube.com/watch?v=u-eqXDUO2mU">History Department Panel: Machiavelli's "The Prince" After 500 Years</a>
         (YouTube, 85 minutes, 11.02.2013).
       </li>
+      <li>Viroli, Maurizio:
+        <a href="https://www.youtube.com/watch?v=cw5n6XMKjHI">Redeeming The Prince</a>
+        (YouTube, 112 minutes, 24.12.2013): video of a talk organised by the Program on Constitutional Government at Harvard University on 7 November 2013.
+        The talk is based on Viroli's book <i class="booktitle">Redeeming The Prince: The Meaning of Machiavelli's Masterpiece</i>.
+        <!--Book published by Princeton UP, 2013: https://press.princeton.edu/titles/10083.html -->
+      </li>
       <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
         <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
         <i class="website">France Culture</i></span>, 02.05.2012: podcast (59 minutes) in which
