Viroli: Lessons from Machiavelli - Leadership in Changing Times

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1413,6 +1413,10 @@
         The talk is based on Viroli's book <i class="booktitle">Redeeming The Prince: The Meaning of Machiavelli's Masterpiece</i>.
         <!--Book published by Princeton UP, 2013: https://press.princeton.edu/titles/10083.html -->
       </li>
+      <li>Viroli, Maurizio:
+        <a href="https://www.youtube.com/watch?v=FhIv7gZsAFU">Lessons from Machiavelli &ndash; Leadership in Changing Times</a>
+        (YouTube, 63 minutes, 14.03.2017): talk at the McCombs Schools of Business on 22.02.2017.
+      </li>
       <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
         <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
         <i class="website">France Culture</i></span>, 02.05.2012: podcast (59 minutes) in which
