panel: How does Machiavelli regard religion?

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1417,6 +1417,10 @@
         <a href="https://www.youtube.com/watch?v=FhIv7gZsAFU">Lessons from Machiavelli &ndash; Leadership in Changing Times</a>
         (YouTube, 63 minutes, 14.03.2017): talk at the McCombs Schools of Business on 22.02.2017.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=tJNfOeJcC_E">How does Machiavelli Regard Religion?</a>
+        (YouTube, 128 minutes, 19.12.2013): video of a panel at the Program on Constitutional Government at Harvard University.
+      </li>
       <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
         <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
         <i class="website">France Culture</i></span>, 02.05.2012: podcast (59 minutes) in which
