Roland Greene on Arcade

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -516,6 +516,12 @@
         <a href="http://blogs.warwick.ac.uk/christiansmith/">Kritical Theory</a> (blog).
         <!--Contact form has logical CAPTCHA: "My t-shirt is red. What colour is my t-shirt?"-->
       </li>
+      <li>
+        <a href="http://arcade.stanford.edu/blogs/user/roland-greene">Roland Greene on Arcade: A Digital Salon</a>:
+        blog by a scholar of early modern culture at Stanford University. He has written several blog posts
+        about the role of literary criticism, <abbr>e.g.</abbr>
+        <a href="http://arcade.stanford.edu/blogs/social-role-critic">The Social Role of the Critic</a> (18.03.2011).
+      </li>
     </ul>
 
     <p>Introductions to literary criticism:</p>
