Collier & Toomey: Scientific and Technical Communication (1997)

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -166,6 +166,11 @@
         <a href="https://pure.strath.ac.uk/portal/files/5750842/00219266.2011.pdf">book review by Nicky Souter</a>
         (<i class="journal">Journal of Biological Education</i>, 45.3 (2011): 166).
       </li>
+      <li>Collier, James H.; Toomey, David M.:
+        <a href="https://www.collier.sts.vt.edu/stc/index.htm"><i class="booktitle">Scientific and Technical Communication: Theory, Practice, and Policy</i> (Digital Edition)</a>:
+        online version of a book originally published in 1997.
+        <!--@@PDF-->
+      </li>
       <!-- Gauch: Scientific Method in Practice: http://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084 -->
       <li>
         <a href="https://www.researchgate.net/post/What_skills_got_your_through_or_will_get_you_through_your_PhD_doctorate">What skills got your through (or will get you through) your PhD/doctorate? </a>
