Anadale: A Defense of Machiavelli

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1466,6 +1466,11 @@
         <i class="magazine">The Atlantic</i>, December 2013.
         <!--@@PDF-->
       </li>
+      <li>Anadale, Christopher:
+        <a href="https://www.youtube.com/watch?v=admjd_b6ftY">A Defense of Machiavelli</a>
+        (YouTube, 11 minutes, 10.08.2017): video with an introduction to and an excerpt from
+        Maurizio Viroli's book <i class="booktitle">Niccolò's Smile</i>.
+      </li>
       <li>The School of Life / Alain de Botton:
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
