MacDonald: Learning to Love Machiavelli

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1471,6 +1471,13 @@
         (YouTube, 11 minutes, 10.08.2017): video with an introduction to and an excerpt from
         Maurizio Viroli's book <i class="booktitle">Niccolò's Smile</i>.
       </li>
+      <li>MacDonald, Don:
+        <a href="https://www.youtube.com/watch?v=664thVARTQo">Learning to Love Machiavelli</a>
+        (YouTube, 10 minutes, 17.07.2012): presentation at TEDxBoston 2012.
+        MacDonald puts the quote &ldquo;it is better to be feared than to be loved&rdquo; into its context.
+        and corrects a number of other misconceptions.
+        MacDonald wrote a <a href="http://donmacdonald.com/">graphic novel about Machiavelli</a>.
+      </li>
       <li>The School of Life / Alain de Botton:
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
