--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1478,6 +1478,10 @@
         and corrects a number of other misconceptions.
         MacDonald wrote a <a href="http://donmacdonald.com/">graphic novel about Machiavelli</a>.
       </li>
+      <li>Travers, Cheryl:
+        <a href="https://www.youtube.com/watch?v=q52A0aCFcq0">The Machiavellian's Guide to Empathy</a>
+        (YouTube, 20 minutes, 26.06.2013): presentation at TEDxLoughborough in March 2013.
+      </li>
       <li>The School of Life / Alain de Botton:
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
