Kohut: Machiavelli's Dilemma

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1482,6 +1482,13 @@
         <a href="https://www.youtube.com/watch?v=q52A0aCFcq0">The Machiavellian's Guide to Empathy</a>
         (YouTube, 20 minutes, 26.06.2013): presentation at TEDxLoughborough in March 2013.
       </li>
+      <li>Kohut, Matt:
+        <a href="https://www.youtube.com/watch?v=5quQd4EjQwc">Machiavelli's Dilemma</a>
+        (YouTube, 12 minutes, 07.01.2016): presentation at TEDxBeaconStreet.
+        Kohut is co-author of <i class="booktitle">Compelling People: The Hidden Qualities that Make Us Influential</i>.
+        <!--https://www.littlebrown.co.uk/books/detail.page?isbn=9780349403076 - not aout Machiavelli-->
+        <!--see review at http://jackmalcolm.com/2013/12/compelling-people-the-hidden-qualities-that-make-us-influential/ -->
+      </li>
       <li>The School of Life / Alain de Botton:
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
