DLF: Meuthen will gesetzliche Rente abschaffen

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2723,6 +2723,10 @@
         <a href="https://www.youtube.com/watch?v=JnvN36Z3M78">Seattle Buckles Under Corporate Pressure, Repeals 'Amazon Tax' to Fight Homelessness</a>
         (YouTube, 15 minutes, 14.06.2018).
       </li>
+      <li>
+        <a href="https://www.deutschlandfunk.de/afd-parteitag-meuthen-will-gesetzliche-rente-abschaffen.1939.de.html?drn:news_id=898531" hreflang="de" lang="de">AfD-Parteitag: Meuthen will gesetzliche Rente abschaffen</a>,
+        <i class="website" lang="de">Deutschlandfunk</i>, 30.06.2018.
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
