Die Zeit: AfD-Chef Meuthen wirbt ... für Ausstieg aus gesetzlicher Rente

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2724,6 +2724,10 @@
         (YouTube, 15 minutes, 14.06.2018).
       </li>
       <li>
+        <a href="https://www.zeit.de/news/2018-06/30/deutschland-afd-chef-meuthen-wirbt-auf-parteitag-fuer-ausstieg-aus-gesetzlicher-rente-30142402" hreflang="de" lang="de"><abbr>AfD</abbr>-Chef Meuthen wirbt auf Parteitag für Ausstieg aus gesetzlicher Rente</a>,
+        <i class="newspaper" lang="de">Die Zeit</i>, 30.06.2018.
+      </li>
+      <li>
         <a href="https://www.deutschlandfunk.de/afd-parteitag-meuthen-will-gesetzliche-rente-abschaffen.1939.de.html?drn:news_id=898531" hreflang="de" lang="de">AfD-Parteitag: Meuthen will gesetzliche Rente abschaffen</a>,
         <i class="website" lang="de">Deutschlandfunk</i>, 30.06.2018.
       </li>
