David Pakman Show: Trump Wildly Implies Tariffs Could Replace Income Tax

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2723,6 +2723,18 @@
         <a href="https://www.youtube.com/watch?v=JnvN36Z3M78">Seattle Buckles Under Corporate Pressure, Repeals 'Amazon Tax' to Fight Homelessness</a>
         (YouTube, 15 minutes, 14.06.2018).
       </li>
+      <li>The David Pakman Show:
+        <a href="https://www.youtube.com/watch?v=cldApyBXgio">Trump Wildly Implies Tariffs Could Replace Income Tax</a>
+        (YouTube, 5 minutes, 27 June 2018):
+        President Trump claimed that abolishing the income tax and replacing everything with tariffs is a good idea
+        because it worked during
+        <a href="https://en.wikipedia.org/wiki/William_McKinley">William McKinley's</a>
+        presidency (1897 – 1901). As David Pakman points out, current government spending
+        is (in the order of magnitude) 10,000 times higher than in McKinley's days,
+        and the government wouldn't be able to fund the military or any semblance of social security
+        if income tax were abolished. (Of course, neoliberals want to get rid of the state and social security,
+        so these objections don't seem to matter to them.)
+      </li>
       <li>
         <a href="https://www.zeit.de/news/2018-06/30/deutschland-afd-chef-meuthen-wirbt-auf-parteitag-fuer-ausstieg-aus-gesetzlicher-rente-30142402" hreflang="de" lang="de"><abbr>AfD</abbr>-Chef Meuthen wirbt auf Parteitag für Ausstieg aus gesetzlicher Rente</a>,
         <i class="newspaper" lang="de">Die Zeit</i>, 30.06.2018.
