Law: The best books on Pseudoscience

--- a/science/index.html
+++ b/science/index.html
@@ -751,7 +751,7 @@
         According to Phil Kerpen (pres of the conservative org American Commitment), who is against the Paris agreement, the Philippines have withdrawn, India building too many coal plants to meet its targets.
         Princeton University's Michael Oppenheimer is in favour of the Paris agreement and points out how China is moving forward.
     -->
-    <h2 id="science-denial">Science Denial and Anti-Science</h2>
+    <h2 id="science-denial">Science Denial, Anti-Science and Pseudoscience</h2>
     <p>The most well-known examples of science denial in the Western world are
       creationism and climate change denial, which are particularly strong in the <abbr>USA</abbr>.
     </p>
@@ -914,6 +914,28 @@
         and
         <a href="https://www.youtube.com/watch?v=Is2GyPYgAH8">Is The Trump Administration Attacking Climate Scientists? (w/Guest Michael Man)</a>
         (Thom Hartmann Program, YouTube, 19.12.2017; 10 minutes).
+      </li>
+      <li>Law, Stephen:
+        <a href="https://fivebooks.com/best-books/stephen-law-on-pseudoscience/">The best books on Pseudoscience</a>,
+        <i class="website">Five Books</i> (no date). Stephen Law, author of
+        <i class="booktitle">Believing Bullshit</i>, recommends the following books:
+        <ul>
+          <li>
+            <i class="booktitle">God's Perfect Child</i> by Caroline Fraser,
+          </li>
+          <li>
+            <i class="booktitle"><abbr>UFOs</abbr>: The Public Deceived</i> by Philip J. Klass,
+          </li>
+          <li>
+            <i class="booktitle">Trick or Treatment</i> by Simon Singh and Edzard Ernst,
+          </li>
+          <li>
+            <i class="booktitle">Intellectual Impostures</i> by Jean Bricmont and Alan Sokal,
+          </li>
+          <li>
+            <i class="booktitle">How to Think about Weird Things</i> by Theodore Schick and Lewis Vaughn.
+          </li>
+        </ul>
       </li>
       <!--
       <li>
