--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1541,6 +1541,21 @@
         <i class="website">Five Books</i>, February 2018.
         <!--@@list books-->
       </li>
+      <li>Bertram, Chris:
+        <a href="https://fivebooks.com/best-books/rousseau-christopher-bertram/">The Best Books on Jean-Jacques Rousseau</a>,
+        <i class="website">Five Books</i> (no date; presumably June 2016).
+        <a href="https://seis.bristol.ac.uk/~plcdib/">Chris Bertram</a>,
+        author of
+        <a href="https://www.routledge.com/Routledge-Philosophy-GuideBook-to-Rousseau-and-the-Social-Contract/Bertram/p/book/9780415201995"><i class="booktitle">Routledge Philosophy GuideBook to Rousseau and the Social Contract</i></a>
+        (2004) recommends the following books:
+        <ul>
+          <li><i class="booktitle">Jean-Jacques Rousseau: Restless Genius</i>, a biography by Leo Damrosch,</li>
+          <li><i class="booktitle">Reading Rousseau in the Nuclear Age</i> by Grace Roosevelt,</li>
+          <li><i class="booktitle">Rousseau: An Introduction to His Psychological, Social and Political Theory</i> by N. J. H. Dent,</li>
+          <li><i class="booktitle">Rousseau, the Age of the Enlightenment, and Their Legacies</i> by Robert Wokler and</li>
+          <li><i class="booktitle">Rousseau's Critique of Inequality</i> by Frederick Neuhouser.</li>
+        </ul>
+      </li>
       <li>Goldstein, Rebecca:
         <a href="https://fivebooks.com/best-books/best-philosophical-novels/">Best Philosophical Novels</a>,
         <i class="website">Five Books</i> (no date; possibly February 2018).
