Atkins: The Best Books on the Emergence of Understanding

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1556,6 +1556,18 @@
           <li><i class="booktitle">Rousseau's Critique of Inequality</i> by Frederick Neuhouser.</li>
         </ul>
       </li>
+      <li>Atkins, Peter:
+        <a href="https://fivebooks.com/best-books/peter-atkins-emergence-understanding/">The Best Books on The Emergence of Understanding</a>,
+        <i class="website">Five Books</i> (no date; presumable April 2018).
+        Atkins, a retired chemistry professor, recommends the following books:
+        <ul>
+          <li><i class="booktitle">Sacred Texts of the World</i> edited by Ninian Smart and Richard Hecht,</li>
+          <li><i class="booktitle">A History of Western Philosophy</i> by Bertrand Russell,</li>
+          <li><i class="booktitle">A Journey into Gravity and Spacetime</i> by J. A. Wheeler,</li>
+          <li><i class="booktitle">The Extended Phenotype</i> by Richard Dawkins and</li>
+          <li><i class="booktitle">The Tempest</i> by William Shakespeare.</li>
+        </ul>
+      </li>
       <li>Goldstein, Rebecca:
         <a href="https://fivebooks.com/best-books/best-philosophical-novels/">Best Philosophical Novels</a>,
         <i class="website">Five Books</i> (no date; possibly February 2018).
